--- a/html/myCenter/index.html
+++ b/html/myCenter/index.html
@@ -194,7 +194,7 @@
 			mui('.mui-content').on('tap', '.noLoginBox', function(e){
 				e.preventDefault();
 				e.stopPropagation();
-				var w = plus.webview.create('../login/login.html', 'login.html');
+				var w = plus.webview.create('../login/login.html', '../login/login.html');
 				w.show(); // 显示窗口
 			});													
 			
