--- a/html/index/index.html
+++ b/html/index/index.html
@@ -300,6 +300,24 @@
 						mui(container).progressbar().hide();
 					}
 				}
+			});			
+			
+			
+			mui.plusReady(function(){
+				//没有登录 隐藏频道添加按钮
+				var state = JSON.parse(localStorage.getItem("$state"));
+				if(!state || !state.userId){
+					document.getElementsByClassName('plus-box')[0].style.display = "none";
+				}
+			});
+			
+			window.addEventListener('hidePlusBox', function(event){
+				var state = JSON.parse(localStorage.getItem("$state"));
+				if(!state || !state.userId){
+					document.getElementsByClassName('plus-box')[0].style.display = "none";
+				}else{
+					document.getElementsByClassName('plus-box')[0].style.display = "inline-block";
+				}
 			});
 		</script>
 	</body>
