--- a/html/scientistStory/publish.html
+++ b/html/scientistStory/publish.html
@@ -482,7 +482,7 @@
 //							page_view: 0
 //						}]
 						mui.fire(w, 'reloadData', {});
-						plus.webview.currentWebview().close();
+						plus.webview.currentWebview().close(300);
 
 					}
 				});
