--- a/html/index/index.html
+++ b/html/index/index.html
@@ -267,6 +267,11 @@
 					group.switchTab(wid);
 				});
 				mui(".plus-box").on("tap",".plus_btn",function(e){
+					var state = JSON.parse(localStorage.getItem("$state"));
+					if(!state || !state.userId){
+						mui.toast('请先登录');
+						return ;
+					}
 					var _this=this,
 					wid=_this.getAttribute("data-wid");
 					mui('body').progressbar({
@@ -299,24 +304,6 @@
 					} else {
 						mui(container).progressbar().hide();
 					}
-				}
-			});			
-			
-			
-			mui.plusReady(function(){
-				//没有登录 隐藏频道添加按钮
-				var state = JSON.parse(localStorage.getItem("$state"));
-				if(!state || !state.userId){
-					document.getElementsByClassName('plus-box')[0].style.display = "none";
-				}
-			});
-			
-			window.addEventListener('hidePlusBox', function(event){
-				var state = JSON.parse(localStorage.getItem("$state"));
-				if(!state || !state.userId){
-					document.getElementsByClassName('plus-box')[0].style.display = "none";
-				}else{
-					document.getElementsByClassName('plus-box')[0].style.display = "inline-block";
 				}
 			});
 		</script>
