--- a/html/myCenter/index.html
+++ b/html/myCenter/index.html
@@ -161,7 +161,16 @@
 					progress: 0
 				}).show();
 				simulateLoading(0);
-				var guid = this.getAttribute('data-guid');				
+				var guid = this.getAttribute('data-guid');
+				
+				if(guid == 'history' || guid == 'chat'){
+					var state = JSON.parse(localStorage.getItem("$state"));
+					if(!state || !state.userId){
+						mui.toast('请先登录');
+						return ;
+					}
+				}
+				
 				plus.nativeUI.showWaiting();
 				var url = './'+guid+'.html';
 				var feedbackWebview = plus.webview.create(url, guid);
