--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				color: #fff;
 			}
 			
-			.publish-story:active{
+			.publish-story:active, .publish-story:hover{
 				color: #fff;
 			}
 		</style>
@@ -273,6 +273,11 @@
 			});
 			
 			mui('.mui-bar-nav').on('tap', '.publish-story', function(){
+				var state = JSON.parse(localStorage.getItem("$state"));
+				if(!state || !state.userId){
+					mui.toast('请先登录');
+					return ;
+				}
 				var w = plus.webview.create('./html/scientistStory/publish.html', 'publish.html');
 				w.show();
 			});
