一些问题修改

--- a/html/index/index.html
+++ b/html/index/index.html
@@ -92,12 +92,14 @@
 			}
 			.mui-slider-indicator.mui-segmented-control {
 				background-color: #ffffff;
+			    border-bottom: 1px solid #EFEFEF;
 			}
 			.plus-box {
 			    position: absolute;
 			    right: 0;
 			    top: 0;
 			    width: 36px;
+			    height: 35px;
 			    line-height: 38px;
 			    text-align: center;
 			    background-color: #ffffff;
