--- a/html/public/articleList.html
+++ b/html/public/articleList.html
@@ -214,13 +214,13 @@
 						);
 					}
 
-					//TODO 此处根据具体的文章性质  判断是否添加 new hot标志。
-					if(i == 1) {
-						$li.find('p.mui-ellipsis').prepend('<span class="mui-icon iconfont icon-new red"></span>&nbsp;&nbsp;');
-					}
-					if(i == 2) {
-						$li.find('p.mui-ellipsis').prepend('<span class="mui-icon iconfont icon-hot2 red"></span>&nbsp;&nbsp;');
-					}
+					//TODO 此处根据具体的文章性质  判断是否添加 new hot标志。  暂时注释掉 2017-09-01
+//					if(i == 1) {
+//						$li.find('p.mui-ellipsis').prepend('<span class="mui-icon iconfont icon-new red"></span>&nbsp;&nbsp;');
+//					}
+//					if(i == 2) {
+//						$li.find('p.mui-ellipsis').prepend('<span class="mui-icon iconfont icon-hot2 red"></span>&nbsp;&nbsp;');
+//					}
 
 					$li.find('p.mui-ellipsis').append('<p class="mui-pull-right closeempty"><span class="mui-icon mui-icon-closeempty"></span></p>');
 
