--- a/html/login/login.html
+++ b/html/login/login.html
@@ -30,12 +30,14 @@
 			}
 			
 			.logo-box {
-				width: 68px;
-				height: 68px;
-				background: #3385ff;
-				border-radius: 18px;
-				padding: 16px 9px;
+				width: 70px;
+				height: 70px;
 				margin: 0px auto;
+			}
+			
+			.logo-box img{
+				width: 70px;
+				height: 70px;
 			}
 			
 			.area {
