--- a/html/myCenter/index.html
+++ b/html/myCenter/index.html
@@ -108,6 +108,12 @@
 		                    	历史与收藏
 		                </a>
 		            </li>
+		             <li class="mui-table-view-cell">
+		                <a class="mui-navigate-right" data-guid="myPublish">	
+		                	<span class="mui-icon mui-icon-flag icon-orange"></span>
+		                    	我的动态
+		                </a>
+		            </li>
 		        </ul>
 		    </div>
 		    <div class="mui-card tech-pomp" style="display: none;">
